# esp_CO2_thread_sensor

./: .gitignore  CMakeLists.txt  FIRMWARE_STATUS.md  SESSION_SUMMARY.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/: copilot-instructions.md
components/scd4x/: CMakeLists.txt  sensirion_i2c_esp32_config.h  sensirion_i2c_hal.c
main/: CMakeLists.txt  esp_ot_config.h  idf_component.yml  main.c  openthread_manager.c  openthread_manager.h  scd4x.c  scd4x.h  sensors.c  sensors.h
